--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^8.2.4",
-    "mysql2": "^3.3.1"
+    "mysql2": "^3.3.1",
+    "sequelize": "^6.31.1"
   }
 }
