--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "console.table": "^0.10.0",
     "inquirer": "^8.2.4",
-    "mysql2": "^3.3.1",
-    "sequelize": "^6.31.1"
+    "mysql2": "^3.3.1"
   }
 }
